--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,9 @@
   url("../fonts/robotomedium.woff") format("woff");
 }
 
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
   overflow: hidden;
   clip: rect(0 0 0 0);
@@ -55,6 +57,7 @@ body {
   line-height: 1.2em;
   color: white;
   background-color: inherit;
+  min-width: 900px;  
 }
 
 * {
@@ -67,36 +70,91 @@ body {
   outline-color: rgba(255, 255, 255, 0.3);
 }
 
-a.on-dark {
+a.on-dark-default {
   text-decoration: underline;
   text-decoration-color: rgba(255, 255, 255, 0.3);
   color: white;
 }
 
-a.on-light {
+a.on-light-default {
   text-decoration: underline;
-  text-decoration-color: rgba(50, 50, 50, 1);
+  text-decoration-color: rgba(50, 50, 50, 0.5);
   color: rgba(50, 50, 50, 1);
 }
 
 a:hover,
 a:active,
 a:focus {
-  text-decoration-color: rgba(255, 188, 158, 0.3);
+  text-decoration-color: rgba(255, 188, 158, 0.3); 
   color: rgba(255, 188, 158, 1);
 }
 
-a.on-light:hover,
-a.on-light:active,
-a.on-light:focus {
+a.on-light-default:hover,
+a.on-light-default:active,
+a.on-light-default:focus {
   text-decoration-color: rgba(232, 77, 55, 1);
   color: rgba(232, 77, 55, 1);
 }
 
-a.on-light:focus {
+a:focus {
   outline-color: rgba(188, 188, 188, 1);
 }
 
+.on-dark {  
+  text-decoration: none;
+  background-image:    -moz-linear-gradient(top,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-image: -webkit-linear-gradient(top,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-image:      -o-linear-gradient(top,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-image:     -ms-linear-gradient(top,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-image:         linear-gradient(to bottom,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-repeat: repeat-x;
+  background-position: 0 100%;
+  background-size: 1px 1px;
+  color: white;
+}
+
+.on-light {
+  color: rgba(50, 50, 50, 1);
+  text-decoration: none;
+  background-image:    -moz-linear-gradient(top,transparent 0, rgba(50, 50, 50, 1) 100%);
+  background-image: -webkit-linear-gradient(top,transparent 0, rgba(50, 50, 50, 1) 100%);
+  background-image:      -o-linear-gradient(top,transparent 0, rgba(50, 50, 50, 1) 100%);
+  background-image:     -ms-linear-gradient(top,transparent 0, rgba(50, 50, 50, 1) 100%);
+  background-image:         linear-gradient(to bottom,transparent 0, rgba(50, 50, 50, 0.5) 100%);
+  background-repeat: repeat-x;
+  background-position: 0 100%;
+  background-size: 2px 2px;
+}
+
+.on-light:hover,
+.on-light:active,
+.on-light:focus { 
+  color: rgba(232, 77, 55, 1);
+  text-decoration: none;
+  background-image:    -moz-linear-gradient(top, transparent 0, rgba(232, 77, 55, 1) 100%);
+  background-image: -webkit-linear-gradient(top, transparent 0, rgba(232, 77, 55, 1) 100%);
+  background-image:      -o-linear-gradient(top, transparent 0, rgba(232, 77, 55, 1) 100%);
+  background-image:     -ms-linear-gradient(top, transparent 0, rgba(232, 77, 55, 1) 100%);
+  background-image:         linear-gradient(to bottom, transparent 0, rgba(232, 77, 55, 1) 100%);
+  background-repeat: repeat-x;
+  background-position: 0 100%;
+  background-size: 1px 1px;
+}
+
+.on-dark:hover,
+.on-dark:active,
+.on-dark:focus { 
+  color: rgba(255, 188, 158, 1);
+  text-decoration: none;
+  background-image:    -moz-linear-gradient(top, transparent 0, rgba(255, 188, 158, 1) 100%);
+  background-image: -webkit-linear-gradient(top, transparent 0, rgba(255, 188, 158, 1) 100%);
+  background-image:      -o-linear-gradient(top, transparent 0, rgba(255, 188, 158, 1) 100%);
+  background-image:     -ms-linear-gradient(top, transparent 0, rgba(255, 188, 158, 1) 100%);
+  background-image:         linear-gradient(to bottom, transparent 0, rgba(255, 188, 158, 1) 100%);
+  background-repeat: repeat-x;
+  background-position: 0 100%;
+  background-size: 1px 1px;
+}
 .page-catalog-body {
   background-color: rgba(132, 157, 143, 1);
   /*background-color: rgba(137, 150, 166, 1);
@@ -127,8 +185,6 @@ a.on-light:focus {
 }
 
 .gllacy-fieldset {
-  display: flex;   
-  flex-direction: column;
   margin: 0 14px 0 0;
   padding: 0; /*Это нужно*/
   font-size: 16px;
@@ -140,11 +196,6 @@ a.on-light:focus {
   line-height: 16px;
   font-weight: 600;
   padding: 6px 16px;
-}
-
-.gllacy-hr {
-  width: 95.4%;
-  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .gllacy-form {
@@ -323,7 +374,7 @@ a.on-light:focus {
   justify-content: flex-start;
   align-items: stretch;
   min-height: 630px;
-  margin-top: 3px; 
+  padding-top: 5px; 
 }
 
 .header-navigation {
@@ -580,7 +631,7 @@ a.on-light:focus {
 }
 
 .promo {
-  margin-top: -12px;
+  margin-top: -10px;
 }
 
 .promo-items {
@@ -659,7 +710,7 @@ a.on-light:focus {
   flex-basis: 22.2%;
   justify-content: stretch;  
   width: 22.2%; 
-  margin: 40px 2.2% 0 0;
+  margin: 40px 2.2% -2px 0;
   padding: 0;
 }
 
@@ -712,24 +763,32 @@ a.on-light:focus {
 }
 
 .catalog-item-name {
-  overflow: hidden;
-  min-height: 2.85em;
-  margin: -2.85em 0 0.2em;
+  min-height: 2.7em;
+  margin: -2.7em 0 0.2em;
   font-size: 16px;
   font-weight: 600;
   line-height: 22px;
   text-align: center;
-  text-decoration: underline;
-  text-decoration-color: rgba(255, 255, 255, 0.3);
+  /*text-decoration: underline;
+  text-decoration-color: rgba(255, 255, 255, 0.3);*/
   color: white;
-  padding: 0 0.2em;
+  padding: 0 0.2em;  
 }
 
 
  /*~~~ - убрать белый цвет, если все-таки выяснится, что при наведении они должны окрашиваться в оранжевый вместе со всеми ссылками в макете*/
-.catalog-item-name:hover,
-.catalog-item-name:focus {
-  text-decoration-color: rgba(255, 255, 255, 0.3);
+.catalog-item-name:hover>.on-dark,
+.catalog-item-name:focus>.on-dark {
+  /*text-decoration-color: rgba(255, 255, 255, 0.3);*/  
+  text-decoration: none;
+  background-image:    -moz-linear-gradient(top,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-image: -webkit-linear-gradient(top,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-image:      -o-linear-gradient(top,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-image:     -ms-linear-gradient(top,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-image:         linear-gradient(to bottom,transparent 0, rgba(255, 255, 255, 0.5) 100%);
+  background-repeat: repeat-x;
+  background-position: 0 100%;
+  background-size: 1px 1px;
   color: rgba(255, 255, 255, 0.8);
   /*~~~*/
 }
@@ -865,9 +924,8 @@ a.on-light:focus {
   flex-direction: row;
   justify-content: flex-start;
   align-items: stretch;
-  flex-wrap: wrap;
-  
-  margin: 40px auto;
+  flex-wrap: wrap;  
+  margin: 40px 0;
 }
 
 .other-item {
@@ -958,7 +1016,7 @@ a.on-light:focus {
 .map {
   position: relative;
   overflow: hidden;
-  height: 430px;
+  max-height: 430px;
 }
 
 .map-info-wrapper {
@@ -967,15 +1025,14 @@ a.on-light:focus {
   top: 0;
   left: 0;
   right: 0;
+  bottom: 0; 
+  width: 100%; /*Привет Мелкософту!*/
   min-width: 900px;
-  max-width: 1200px;
-  min-height: 305px;
-  margin: 0 auto;
+  max-width: 1200px;  
+  min-height: 305px;  
+  margin: auto;  
 }
 
-.map:hover {
-  width: 100%;
-}
 
 .map-img {
   width: 100%;   
@@ -984,15 +1041,19 @@ a.on-light:focus {
 .map-info {
   position: absolute;
   z-index: 1;
-  top: 64px;
+  top: 0;
   right: 2.2%;
+  bottom: 0;
+  overflow: auto;
   width: 302px;
   height: 305px;
+  margin: auto;
   padding: 25px;
   border-radius: 0.7em;
   color: rgba(50, 50, 50, 1);
   background-color: white;
 }
+
 
 .map-info-p {
   margin: 4px 0 0;
@@ -1028,43 +1089,43 @@ a.on-light:focus {
   justify-content: flex-start;
   align-items: center;
   flex-wrap: nowrap;
-  min-height: 50px;
+  min-height: 103px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   font-size: 13px;
   line-height: 18px;
 }
 
-.footer-part {
+.footer-social {  
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 16px 0;
-  color: white;
-}
-
-.footer-social {
-  flex-basis: 25%;
-  flex-wrap: nowrap;
+  flex-direction: row; 
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
+  flex-basis: 22.2%;  
+  max-width: 22.2%;
+  margin-left: 2.2%;
 }
 
-.footer-menu {
-  margin: 0;
-  margin-left: 11%;
-  padding: 0;  
-  flex-grow: 0;
-  list-style: none;
+.footer-center {
+  display: flex;
+  flex-basis: 46.6%;
+  max-width: 46.6%;
+  justify-content: center;
+  align-items: center;
+  margin-left: 2.2%;
 }
 
 .footer-info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: nowrap;
-  margin-left: auto;
+  justify-content: center;  
+  flex-wrap: nowrap; 
+  align-items: flex-end;
+  flex-basis: 22.2%;
+  max-width: 22.2%;
+  margin-left: 2.2%;
 }
 
 .social-item {
@@ -1106,28 +1167,29 @@ a.on-light:focus {
   box-shadow: 1px 1px 0 2px rgba(136, 136, 136, 1) inset;
 }
 
-.footer-menu {
+.footer-menu {   
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-content: flex-start;
+  justify-content: space-between;
   flex-wrap: wrap;
-  width: 300px;
+  list-style: none;
+  padding: 0;
+  margin: 0;  
+  min-width: 62%;
+  flex-basis: 62%;
 }
 
-.footer-menu > li {
+.footer-menu > li  { 
+  width: 50%;  
   display: inline-block;
-  flex-basis: 50%;
-  min-width: 50%;
-  margin: 0;
-  padding: 0; 
+  vertical-align: top;    
 }
 
 .footer-menu-link {
   font-size: 13px;
   font-weight: normal;
-  line-height: 18px;
-  white-space: nowrap;
+  line-height: 18px;  
+  display: inline; /*А то IE на какой-то стадии забывает это. А подчеривание градиентом только для него и делалось.*/
 }
 
 .footer-menu-link.iconed {
@@ -1142,7 +1204,7 @@ a.on-light:focus {
   left: -1.4em; 
   width: 15px;
   height: 13px;    
-  background-image: url("../img/heart.svg ");
+  background-image: url("../img/heart.svg");
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -1159,7 +1221,7 @@ a.on-light:focus {
   justify-content: flex-start;
   align-items: stretch; 
   min-height: 40px; 
-  margin-top: 5px;
+  padding-top: 5px;
 }
 
 .page-catalog-title {
@@ -1173,7 +1235,6 @@ a.on-light:focus {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-top: 15px;
 }
 
 .filter-row {
@@ -1181,6 +1242,7 @@ a.on-light:focus {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  margin-top: 15px;
 }
 
 
@@ -1205,16 +1267,16 @@ a.on-light:focus {
   white-space: nowrap; 
 } 
 
-.filter-sorting {
-  align-self: stretch;
+.filter-sorting {   
   width: 100%;
   min-height: 37px;
-  padding-left: 0.5em;
+  padding-left: 1em;
+  padding-top: 0.2em;
   font-size: 16px;
   font-weight: 600;
   line-height: 18px;
   border-color: transparent;
-  border-radius: 1em;
+  /*border-radius: 1em;*/
   color: white;
   background-color: transparent;
   background-image: url("../img/select-white.svg");
@@ -1232,7 +1294,7 @@ a.on-light:focus {
 }
 
 .filter-sorting::-ms-value {
-  border-radius: 1em;
+  /*border-radius: 1em;*/
   color: white;
   background-color: transparent;
   background-image: url("../img/select-white.svg");
@@ -1241,11 +1303,11 @@ a.on-light:focus {
 }
 
 .filter-sorting::-ms-value:hover {
-  border-radius: 1em;
+  /*border-radius: 1em;*/
   color: rgba(50, 50, 50, 1);
   background-image: url("../img/select-black.svg");
-  background-repeat: no-repeat;
-  background-position: 95% center;
+  /*background-repeat: no-repeat;
+  background-position: 95% center;*/
 }
 
 .filter-sorting:hover {
@@ -1253,9 +1315,10 @@ a.on-light:focus {
   background-image: url("../img/select-black.svg");
 }
 
+/* Пришлось вернуть цветовую стилизацию выпадающего списка, ибо в IE из-за белого цвета шрифта select'a белый передавался и в список. Белый на белом. */
 .filter-sorting-item {
   color: rgba(50, 50, 50, 1);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .filter-sorting-item:checked {
@@ -1272,7 +1335,7 @@ a.on-light:focus {
   background-color: rgba(255, 255, 255, 0.2);
   min-height: 37px;
   border-radius: 1em;  
-  padding: 0;
+  /*padding: 0;  */
 }
 
 .gllacy-fieldset-sorting>.gllacy-filter-wrapper {
@@ -1280,7 +1343,7 @@ a.on-light:focus {
 }
 
 .gllacy-fieldset-price>.gllacy-filter-wrapper { 
-  min-width: 220px;   
+  min-width: 220px;      
 }
 
 .gllacy-fieldset-fillers>.gllacy-filter-wrapper{
@@ -1296,7 +1359,7 @@ a.on-light:focus {
   min-height: 37px;  
 }
 
-.filter-ranges {
+/*.filter-ranges {
   position: relative;
   width: 90%;
 }
@@ -1393,27 +1456,12 @@ a.on-light:focus {
 
 .filter-range:focus::-ms-thumb {
   border: 8px solid rgba(255, 255, 255, 0.6);
-}
+}*/
 
 .filter-option label {
   font-size: 16px;
   font-weight: 600;
   line-height: 18px;
-}
-
-.filter-checkbox,
-.filter-radio {
-  position: absolute;
-  z-index: 5;
-  top: 50%;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  margin: 0;
-  margin-top: -12px;
-  padding: 0;
-  cursor: pointer;
-  opacity: 0;
 }
 
 .filter-checkbox + label::before,
@@ -1438,11 +1486,13 @@ a.on-light:focus {
 .filter-checkbox:checked + label::before {
   background-image: url("../img/checkbox-on.svg");
   opacity: 0.8;
+  width: 27px;
 }
 
 .filter-checkbox:checked:disabled + label::before {
   background-image: url("../img/checkbox-on.svg");
   opacity: 0.4;
+  width: 27px;
 }
 
 .filter-checkbox:not(:checked):disabled + label::before {
@@ -1596,6 +1646,7 @@ a.on-light:focus {
   justify-content: flex-end;
   margin: 80px 0 26px;  
   list-style: none;
+  position: relative;
 }
 
 .pagination > li {
@@ -1622,6 +1673,17 @@ a.on-light:focus {
 .pagination-link:active {
   color: rgba(50, 50, 50, 1);
   background-color: white;
+}
+
+.pagination::after {
+  content: "";
+  position: absolute;
+  top: 50px;
+  left: 2.3%;
+  right: 2.3%;
+  width: auto;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .link-disabled,
@@ -1750,11 +1812,65 @@ a.on-light:focus {
   display: block;
 }
 
+
+.range-controls {
+  position: relative;  
+  min-height: 37px; 
+  padding-top: 17px; 
+  padding-right: 20px;
+  padding-left: 20px;   
+  background-color: transparent;   
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: rgba(255, 255, 255, 0.4);
+}
+
+.range-controls .bar {
+  width: 40%;
+  height: 2px;
+  background-color: white;
+}
+
+.range-controls .toggle {
+  box-sizing: content-box;
+  position: absolute;
+  top: 8px;
+  left: 0;  
+  width: 4px;
+  height: 4px;  
+  border: 8px solid white; 
+  background-color: rgba(172, 172, 172, 1);  
+  border-radius: 50%;
+  cursor: pointer; 
+}
+
+.range-controls .toggle-min {
+  left: 10%; 
+}
+
+.range-controls .toggle-max {
+  left: 50%;
+}
+
+@media screen and (max-width: 1115px) {
+  .footer-menu {
+    flex-basis: 80%;
+}
+}
+
 @media screen and (max-width: 900px) {
   .catalog-item-img {
     width: 200px;
     height: 200px;
   }
+  .slider-items {
+    max-width: 80%;
+  }
 
+  
 }
+
+
 
